fix : gap

--- a/style.css
+++ b/style.css
@@ -37,12 +37,12 @@ body {
     font-weight: lighter;
     display: flex;
     flex-direction: column;
+    gap: 5px;
 }
 
 input[type="text"], input[type="password"] {
     width: 100%;
     height: 40px;
-    padding-bottom: 5px;
 }
 
 #agree {
@@ -95,7 +95,7 @@ a {
 .container{
     position: relative;
     display: flex;
-    margin-bottom: 3px;
+
 }
 .containerbutton{
     
